# Heron

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  server.py  test.py  test_sdk.py
.github/: dependabot.yml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/incidents/: page.tsx
frontend/app/login/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/setup/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/landing/: alert-demo.tsx  final-cta.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  problem.tsx
frontend/components/ui/: button.tsx  card.tsx  toggle.tsx
frontend/lib/: auth.ts  heron-api.ts
heron/: __init__.py  buffer.py  config.py  sender.py  tracker.py
heron-server/: requirements.txt  run.py
heron-server/app/: config.py  database.py  dependencies.py  main.py  worker.py
heron-server/app/routes/: auth.py  events.py  incidents.py  projects.py
heron-server/app/services/: auth_service.py  cleanup_service.py  event_service.py  event_stats_service.py  incident_service.py  project_service.py  silence_detector.py  slack_service.py
heron-server/app/utils/: api_key.py  security.py
heron-server/tests/: conftest.py  test_events.py  test_incidents.py
