[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getheron"
version = "0.1.0"
authors = [
  { name="Pranav KP", email="pranavdev170@gmail.com" },
]
description = "Heron Python SDK for Business Event Monitoring"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["heron*"]

[project.urls]
Homepage = "https://github.com/pranavkp71/Heron"
